--- a/root/backend/package.json
+++ b/root/backend/package.json
@@ -12,6 +12,7 @@
   "author": "Max",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
