--- a/root/frontend/package.json
+++ b/root/frontend/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-textarea-code-editor": "^2.1.1",
     "axios": "^1.3.1",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
